@startuml
interface org.swe.slideshow.model.Iterator {
~ boolean hasNext(int)
~ Object next()
~ Object preview()
~ int getCurrentIndex()
~ String getCurrentItemId()
~ AlbumItem getCurrentItem()
}

class org.swe.slideshow.model.Indicator {
- VBox panel
- Rectangle progressBar
- Rectangle backgroundBar
- Arc progressArc
- Circle backgroundCircle
- Text titleText
- Text percentText
- Text fractionText
- {static} double FIXED_BAR_WIDTH
- {static} double BAR_HEIGHT
- {static} double CIRCLE_RADIUS
- {static} double CIRCLE_STROKE_WIDTH
- float startValue
- float stopValue
- float currentValue
- Color normalColor
- Color selectedColor
- Pane progressPane
- Pane circularPane
- HBox textBox
- boolean isCircular
- Text centerTimeText
+ void setCircularSize(double,double)
+ void setPaint(Color)
+ void setSelectedColor(Color)
+ void setBounds(float,float)
+ void setCurrentValue(float)
+ void setTitle(String)
+ void addTitle(String)
+ void addBoundsLine(float,float)
+ void addProgressBar(float)
- double calculateProgressWidth()
+ void addMark(String)
+ void addCircularProgress(float)
- double calculateCircularAngle()
+ void setPercentAndFraction(int,int)
- void updatePercentAndFraction(int,int)
+ void setTimeDisplay(float)
- void updateProgress()
+ void updateProgress(int,int)
+ void show(Pane)
+ VBox getPanel()
+ void setMaxWidth(double)
+ void setMaxHeight(double)
}


class org.swe.slideshow.model.SlideCollection {
- {static} int DEFAULT_CAPACITY
- AlbumItem[] items
- int size
~ void add(AlbumItem)
~ AlbumItem getItem(int)
~ int size()
~ void clear()
- void ensureCapacity(int)
}


interface org.swe.slideshow.model.factory.AggregateComponentsFactory {
~ ConcreteAggregate createAggregate()
~ SlideNavigator createNavigator(ConcreteAggregate)
~ String description()
}

class org.swe.slideshow.model.ImpressionStore {
- {static} Pattern ENTRY_PATTERN
- Path storageFile
- Map<String,ImpressionRecord> impressions
- boolean initialized
+ ImpressionRecord getImpression(String)
+ void saveImpression(String,String,String)
- void ensureLoaded()
- void loadFromDisk()
- void persist()
- String coalesce(String)
- String escape(String)
- String unescape(String)
- boolean isHexSequence(String)
}


class org.swe.slideshow.model.ImpressionStore$ImpressionRecord {
- String text
- String emotion
+ String emotion()
+ String text()
}


class org.swe.slideshow.Controller {
- {static} String DEFAULT_EMOTION
- {static} String[] EMOTION_OPTIONS
- StackPane imageWrapper
- ImageView screen
- Button startButton
- Button stopButton
- Button selectDirectoryButton
- Button nextButton
- Button prevButton
- ComboBox<String> formatComboBox
- TextField delayTextField
- Label statusLabel
- Pane indicatorPane
- TextArea impressionTextArea
- Button saveImpressionButton
- Label impressionStatusLabel
- ComboBox<String> emotionComboBox
- Button saveAlbumButton
- Button loadAlbumButton
- ComboBox<String> embeddedAlbumComboBox
- Button loadEmbeddedButton
- ConcreteAggregate slides
- SlideNavigator navigator
- Timeline timeline
- String selectedDirectory
- String selectedFormat
- int slideDelay
- Indicator progressIndicator
- Indicator timerIndicator
- Director director
- Timeline timerTimeline
- long startTime
- float maxTime
- boolean impressionUpdatingInternally
- EmbeddedImageManager embeddedImageManager
- Map<String,EmbeddedAlbum> embeddedAlbums
+ void initialize()
# void onSelectDirectoryClick()
# void onFormatChange()
# void onStartClick()
# void onStopClick()
# void onNextClick()
# void onPrevClick()
- void handleSlideShow(ActionEvent)
- void showNextImage()
- void createProgressIndicator(int)
- void createTimerIndicator()
- void startTimer()
- void updateTimer()
- void removeProgressIndicator()
- void removeTimerIndicator()
- void updateProgressIndicator()
- void updateIndicatorsDisplay()
- void updateStatus(String)
# void onSaveImpressionClick()
# void onSaveAlbumClick()
# void onLoadAlbumClick()
# void onLoadEmbeddedClick()
- void setupImpressionControls()
- void setupEmbeddedAlbums()
- void updateImpressionField()
- void disableImpressionControls()
- void resetEmotionVisuals()
- void applyEmotionTheme(AlbumItem)
- Optional<String> promptAlbumName()
- Path buildAlbumPath(Path,String)
- String sanitizeAlbumName(String)
- Path makeUniquePath(Path)
- void loadFromFactory(AggregateComponentsFactory,Function<Integer,String>,String,boolean)
- void handleDatasetChange(Function<Integer,String>,String,boolean)
- void toggleEmbeddedButton(boolean)
- void updateControlsForImageCount(int)
}


class org.swe.slideshow.model.AlbumStore {
- {static} Pattern ITEM_PATTERN
+ {static} void saveAlbum(Path,AlbumItem[])
+ {static} AlbumItem[] loadAlbum(Path)
- {static} String escape(String)
- {static} String unescape(String)
- {static} boolean isHexSequence(String)
}


class org.swe.slideshow.model.embedded.EmbeddedAlbum {
- String id
- String displayName
- Path path
+ String id()
+ String displayName()
+ Path path()
}


class org.swe.slideshow.model.SlideNavigator {
- ConcreteAggregate aggregate
- Iterator iterator
+ Image nextImage()
+ Image previousImage()
+ void refresh()
+ int currentIndex()
+ AlbumItem currentItem()
+ int totalSlides()
+ boolean hasSlides()
}


class org.swe.slideshow.model.embedded.EmbeddedImageManager {
- {static} String BASE_RESOURCE_FOLDER
- Path basePath
+ List<EmbeddedAlbum> discoverAlbums()
+ AlbumItem[] loadAlbumItems(EmbeddedAlbum)
- boolean isSupportedImage(Path)
- String prettifyName(String)
- void resolveBasePath()
}


class org.swe.slideshow.model.BuilderIndicator {
- Indicator indicator
+ void setView(int,char,char)
- Color getColorFromChar(char)
+ void lineBounds(float,float)
+ void linePaint(float)
+ void circularPaint(float)
+ void lineMark(String)
+ void addTitle(String)
+ Indicator build()
}


class org.swe.slideshow.model.Director {
+ Indicator constructSlideShowIndicator(Builder,int)
+ Indicator constructTimeIndicator(Builder,float,float,float)
+ Indicator constructCustomIndicator(Builder,String,float,float,float,char,char)
}

interface org.swe.slideshow.model.Builder {
~ void setView(int,char,char)
~ void lineBounds(float,float)
~ void linePaint(float)
~ void circularPaint(float)
~ void lineMark(String)
~ void addTitle(String)
~ Indicator build()
}

class org.swe.slideshow.visual.EmotionPalette {
+ {static} String DEFAULT_EMOTION
- {static} EmotionStyle DEFAULT_STYLE
- {static} Map<String,EmotionStyle> STYLES
+ {static} EmotionStyle styleFor(String)
}


class org.swe.slideshow.visual.EmotionPalette$EmotionStyle {
- String label
- String hexColor
+ Color fxColor()
+ java.awt.Color awtColor()
+ String cssColor()
+ String label()
+ String hexColor()
}


class org.swe.slideshow.model.factory.EmbeddedAggregateFactory {
- EmbeddedImageManager manager
- EmbeddedAlbum album
+ ConcreteAggregate createAggregate()
+ SlideNavigator createNavigator(ConcreteAggregate)
+ String description()
}


class org.swe.slideshow.Application {
+ void start(Stage)
+ {static} void main(String[])
}

class org.swe.slideshow.model.factory.DirectoryAggregateFactory {
- String directory
- String format
+ ConcreteAggregate createAggregate()
+ SlideNavigator createNavigator(ConcreteAggregate)
+ String description()
}


class org.swe.slideshow.model.ConcreteAggregate {
- String filetop
- String imageFormat
- SlideCollection slideCollection
+ Iterator getIterator()
- void loadImageFiles()
- boolean isSupportedImage(Path)
- boolean matchesSelectedFormat(Path)
+ void setFiletop(String)
+ void setImageFormat(String)
+ int getImageCount()
+ void loadFromAlbumItems(AlbumItem[])
+ AlbumItem[] getAllItems()
}


class org.swe.slideshow.model.ConcreteAggregate$ImageIterator {
- SlideCollection collection
- int current
- Image getImage(int)
+ boolean hasNext(int)
+ Object next()
+ Object preview()
+ int getCurrentIndex()
+ String getCurrentItemId()
+ AlbumItem getCurrentItem()
}


class org.swe.slideshow.visual.AlbumImageRenderer {
- {static} int BORDER
- {static} int FOOTER_HEIGHT
- {static} int FOOTER_PADDING
- {static} int MAX_LINES
+ {static} void renderWithEmotion(Path,Path,AlbumItem)
- {static} void drawCaption(Graphics2D,String,int,int)
- {static} String buildCaption(AlbumItem)
}


class org.swe.slideshow.model.AlbumItem {
- String imagePath
- String impressionText
- String emotion
+ String getImagePath()
+ String getImpressionText()
+ void setImpressionText(String)
+ String getEmotion()
+ void setEmotion(String)
+ boolean hasImpression()
}




org.swe.slideshow.model.ImpressionStore +.. org.swe.slideshow.model.ImpressionStore$ImpressionRecord
org.swe.slideshow.model.Builder <|.. org.swe.slideshow.model.BuilderIndicator
org.swe.slideshow.visual.EmotionPalette +.. org.swe.slideshow.visual.EmotionPalette$EmotionStyle
org.swe.slideshow.model.factory.AggregateComponentsFactory <|.. org.swe.slideshow.model.factory.EmbeddedAggregateFactory
org.swe.slideshow.Application <|-- org.swe.slideshow.Application
org.swe.slideshow.model.factory.AggregateComponentsFactory <|.. org.swe.slideshow.model.factory.DirectoryAggregateFactory
org.swe.slideshow.model.ConcreteAggregate +.. org.swe.slideshow.model.ConcreteAggregate$ImageIterator
org.swe.slideshow.model.Iterator <|.. org.swe.slideshow.model.ConcreteAggregate$ImageIterator
@enduml